inline style for footer centered

--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -6,11 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body style="display: flex; flex-direction: column; height: 100vh;">
+<body style="display: flex; flex-direction: column; height: 100vh; margin: 0;">
     <header style="background-color: #FF0000; height: 70px; width: 100%">
     </header>
     <main style="flex: 1;"></main>
-    <footer style="background-color: #00FF00; height: 60px; width: 100%; justify-content: center; align-items: center">
+    <footer style="display: flex; background-color: #00FF00; height: 60px; width: 100%; align-items: center; justify-content: center;">
         Best School
     </footer>
 </body>
