--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="styles/3-header.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="logo"></div>
+    </header>
     <main></main>
     <footer>
         Best School
