display results done

--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -71,6 +71,21 @@
             <h1>
                 Places
             </h1>
+            <article>
+                <h2>
+                    Tiny house
+                </h2>
+            </article>
+            <article>
+                <h2>
+                    Luxury apartment
+                </h2>
+            </article>
+            <article>
+                <h2>
+                    A suite
+                </h2>
+            </article>
         </section>
     </div>
     <main></main>
