--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -73,12 +73,12 @@
             </h1>
             <article>
                 <h2>
-                    Tiny house
+                    My home
                 </h2>
             </article>
             <article>
                 <h2>
-                    Luxury apartment
+                    Tiny house
                 </h2>
             </article>
             <article>
